Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23084

BareMetal: SDCC parser ignores the assembler errors

    XMLWordPrintable

Details

    • 9035a8b17e8c33ed8bee550d139111a63442416c (qt-creator/qt-creator/4.11)

    Description

      Ignored the assembler errors in a form of:

      autovec_sdcc.a51:7: Error: <o> .org in REL area or directive / mnemonic error
      autovec_sdcc.a51:8: Error: <o> .org in REL area or directive / mnemonic error
      autovec_sdcc.a51:8: Error: <q> missing or improper operators, terminators, or delimiters
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kuzulis Denis Shienkov
            kuzulis Denis Shienkov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes