BareMetal: Handle missed SDCC assembler errors

... in a form like:

 autovec_sdcc.a51:7: Error: <o> .org in REL area or directive / mnemonic error
 autovec_sdcc.a51:8: Error: <o> .org in REL area or directive / mnemonic error
 autovec_sdcc.a51:8: Error: <q> missing or improper operators, terminators, or delimiters

Fixes: QTCREATORBUG-23084
Change-Id: I346b1970a90bc515a647477d089e66e742567733
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>